# random-quote-generator

./: .flake8  LICENSE  pyproject.toml
.github/workflows/: branch.yml  release.yaml
docs/: conf.py  index.rst
random_quote_generator/: get_quote.py
tests/: test_get_quote.py
