[tool.poetry]
name = "random-quote-generator"
version = "0.1.0"
description = "Random Quote Generator"
authors = ["Abhishek Kumar Singh <Abhishek.kumar.singh@mcafee.com>"]
packages = [
    { include = "random_quote_generator" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
bandit = "^1.7.4"
safety = "^2.1.1"
Sphinx = "^5.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
